@@ -30,7 +30,7 @@
  */
 
 import java.lang.foreign.*;
-import static java.lang.foreign.MemoryAddress.NULL;
+import static java.lang.foreign.MemorySegment.NULL;
 import static org.llvm.clang.Index_h.*;
 import org.llvm.clang.*;
 
@@ -47,10 +47,10 @@ public class ASTPrinter {
             System.exit(1);
         }
 
-        try (var session = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             // parse the C header/source passed from the command line
             var index = clang_createIndex(0, 0);
-            var tu = clang_parseTranslationUnit(index, session.allocateUtf8String(args[0]),
+            var tu = clang_parseTranslationUnit(index, arena.allocateUtf8String(args[0]),
                     NULL, 0, NULL, 0, CXTranslationUnit_None());
             // array trick to update within lambda
             var level = new int[1];
@@ -59,12 +59,12 @@ public class ASTPrinter {
             // clang Cursor visitor callback
             visitor[0] = CXCursorVisitor.allocate((cursor, parent, data) -> {
                 var kind = clang_getCursorKind(cursor);
-                var name = asJavaString(clang_getCursorSpelling(session, cursor));
-                var kindName = asJavaString(clang_getCursorKindSpelling(session, kind));
+                var name = asJavaString(clang_getCursorSpelling(arena, cursor));
+                var kindName = asJavaString(clang_getCursorKindSpelling(arena, kind));
                 System.out.printf("%s %s %s", " ".repeat(level[0]), kindName, name);
-                var type = clang_getCursorType(session, cursor);
+                var type = clang_getCursorType(arena, cursor);
                 if (CXType.kind$get(type) != CXType_Invalid()) {
-                    var typeName = asJavaString(clang_getTypeSpelling(session, type));
+                    var typeName = asJavaString(clang_getTypeSpelling(arena, type));
                     System.out.printf(" <%s>", typeName);
                 }
                 System.out.println();
@@ -75,10 +75,10 @@ public class ASTPrinter {
                 level[0]--;
 
                 return CXChildVisit_Continue();
-            }, session);
+            }, arena.scope());
 
             // get the AST root and visit it
-            var root = clang_getTranslationUnitCursor(session, tu);
+            var root = clang_getTranslationUnitCursor(arena, tu);
             clang_visitChildren(root, visitor[0], NULL);
 
             clang_disposeTranslationUnit(tu);
