@@ -26,9 +26,8 @@
 
 package org.openjdk.jextract.clang;
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.SegmentAllocator;
 
 /**
@@ -39,23 +38,20 @@ import java.lang.foreign.SegmentAllocator;
  */
 public abstract class ClangDisposable implements SegmentAllocator, AutoCloseable {
     protected final MemorySegment ptr;
-    protected final MemorySession session;
-    protected final SegmentAllocator arena;
+    protected final Arena arena;
 
-    public ClangDisposable(MemoryAddress ptr, long size, Runnable cleanup) {
-        this.session = MemorySession.openConfined();
-        this.ptr = MemorySegment.ofAddress(ptr, size, session).asReadOnly();
-        session.addCloseAction(cleanup);
-        this.arena = SegmentAllocator.newNativeArena(session);
+    public ClangDisposable(MemorySegment ptr, long size, Runnable cleanup) {
+        this.arena = Arena.openConfined();
+        this.ptr = MemorySegment.ofAddress(ptr.address(), size, arena.scope(), cleanup).asReadOnly();
     }
 
-    public ClangDisposable(MemoryAddress ptr, Runnable cleanup) {
+    public ClangDisposable(MemorySegment ptr, Runnable cleanup) {
         this(ptr, 0, cleanup);
     }
 
     @Override
     public void close() {
-        session.close();
+        arena.close();
     }
 
     @Override
