@@ -26,11 +26,13 @@ package org.openjdk.jextract.impl;
 
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.GroupLayout;
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.ValueLayout;
 import org.openjdk.jextract.Declaration;
 import org.openjdk.jextract.Type;
+import org.openjdk.jextract.Type.Primitive;
+import org.openjdk.jextract.Type.Primitive.Kind;
 
 import javax.tools.JavaFileObject;
 import java.lang.constant.ClassDesc;
@@ -48,7 +50,7 @@ class ToplevelBuilder extends JavaSourceBuilder {
     private int declCount;
     private final List<JavaSourceBuilder> builders = new ArrayList<>();
     private SplitHeader lastHeader;
-    private RootConstants rootConstants;
+    private final RootConstants rootConstants;
     private int headersCount;
     private final ClassDesc headerDesc;
 
@@ -75,8 +77,7 @@ class ToplevelBuilder extends JavaSourceBuilder {
         builders.add(rootConstants);
         List<JavaFileObject> files = new ArrayList<>();
         files.addAll(builders.stream()
-                .flatMap(b -> b.toFiles().stream())
-                .collect(Collectors.toList()));
+                .flatMap(b -> b.toFiles().stream()).toList());
         return files;
     }
 
@@ -95,30 +96,33 @@ class ToplevelBuilder extends JavaSourceBuilder {
     }
 
     @Override
-    public void addVar(String javaName, String nativeName, MemoryLayout layout, Optional<String> fiName) {
-        nextHeader().addVar(javaName, nativeName, layout, fiName);
+    public void addVar(Declaration.Variable varTree, String javaName,
+        MemoryLayout layout, Optional<String> fiName) {
+        nextHeader().addVar(varTree, javaName, layout, fiName);
     }
 
     @Override
-    public void addFunction(String javaName, String nativeName, FunctionDescriptor descriptor, boolean isVarargs, List<String> parameterNames) {
-        nextHeader().addFunction(javaName, nativeName, descriptor, isVarargs, parameterNames);
+    public void addFunction(Declaration.Function funcTree, FunctionDescriptor descriptor,
+            String javaName, List<String> parameterNames) {
+        nextHeader().addFunction(funcTree, descriptor, javaName, parameterNames);
     }
 
     @Override
-    public void addConstant(String javaName, Class<?> type, Object value) {
-        nextHeader().addConstant(javaName, type, value);
+    public void addConstant(Declaration.Constant constantTree, String javaName, Class<?> javaType) {
+        nextHeader().addConstant(constantTree, javaName, javaType);
     }
 
     @Override
-    public void addTypedef(String name, String superClass, Type type) {
+    public void addTypedef(Declaration.Typedef typedefTree, String javaName,
+        String superClass, Type type) {
         if (type instanceof Type.Primitive primitive) {
             // primitive
-            nextHeader().emitPrimitiveTypedef(primitive, name);
+            nextHeader().emitPrimitiveTypedef(typedefTree, primitive, javaName);
         } else if (((TypeImpl)type).isPointer()) {
             // pointer typedef
-            nextHeader().emitPointerTypedef(name);
+            nextHeader().emitPointerTypedef(typedefTree, javaName);
         } else {
-            TypedefBuilder builder = new TypedefBuilder(this, name, superClass);
+            TypedefBuilder builder = new TypedefBuilder(this, typedefTree, javaName, superClass);
             builders.add(builder);
             builder.classBegin();
             builder.classEnd();
@@ -126,20 +130,30 @@ class ToplevelBuilder extends JavaSourceBuilder {
     }
 
     @Override
-    public StructBuilder addStruct(String name, Declaration parent, GroupLayout layout, Type type) {
-        String structName = name.isEmpty() ? parent.name() : name;
-        StructBuilder structBuilder = new StructBuilder(this, structName, layout, type);
+    public StructBuilder addStruct(Declaration.Scoped tree, boolean isNestedAnonStruct,
+        String javaName, GroupLayout layout) {
+        StructBuilder structBuilder = new StructBuilder(this, tree, javaName, layout) {
+            @Override
+            boolean isClassFinal() {
+                return false;
+            }
+
+            @Override
+            void emitConstructor() {
+                // None...
+            }
+        };
         builders.add(structBuilder);
         return structBuilder;
     }
 
     @Override
-    public String addFunctionalInterface(String name, FunctionDescriptor descriptor, Optional<List<String>> parameterNames) {
-        FunctionalInterfaceBuilder builder = new FunctionalInterfaceBuilder(this, name, descriptor, parameterNames);
+    public void addFunctionalInterface(Type.Function funcType, String javaName,
+        FunctionDescriptor descriptor, Optional<List<String>> parameterNames) {
+        FunctionalInterfaceBuilder builder = new FunctionalInterfaceBuilder(this, funcType, javaName, descriptor, parameterNames);
         builders.add(builder);
         builder.classBegin();
         builder.classEnd();
-        return builder.className();
     }
 
     private SplitHeader nextHeader() {
@@ -165,8 +179,13 @@ class ToplevelBuilder extends JavaSourceBuilder {
         }
 
         @Override
-        String mods() {
-            return " ";
+        boolean isClassFinal() {
+            return false;
+        }
+
+        @Override
+        void emitConstructor() {
+            // None...
         }
     }
 
@@ -177,14 +196,8 @@ class ToplevelBuilder extends JavaSourceBuilder {
         }
 
         @Override
-        String mods() {
-            return "public ";
-        }
-
-        @Override
         void classBegin() {
             super.classBegin();
-            emitConstructor();
             // emit basic primitive types
             emitPrimitiveTypedef(Type.primitive(Type.Primitive.Kind.Bool), "C_BOOL");
             emitPrimitiveTypedef(Type.primitive(Type.Primitive.Kind.Char), "C_CHAR");
@@ -195,16 +208,6 @@ class ToplevelBuilder extends JavaSourceBuilder {
             emitPrimitiveTypedef(Type.primitive(Type.Primitive.Kind.Float), "C_FLOAT");
             emitPrimitiveTypedef(Type.primitive(Type.Primitive.Kind.Double), "C_DOUBLE");
             emitPointerTypedef("C_POINTER");
-        }
-
-        void emitConstructor() {
-            incrAlign();
-            indent();
-            append("/* package-private */ ");
-            append(className());
-            append("() {}");
-            append('\n');
-            decrAlign();
         }
 
         @Override
@@ -237,49 +240,60 @@ class ToplevelBuilder extends JavaSourceBuilder {
         }
 
         @Override
+        String mods() {
+            return "final "; // Constants$root package-private!
+        }
+
+        @Override
         protected String primitiveLayoutString(ValueLayout vl) {
             if (vl.carrier() == boolean.class) {
                 return "JAVA_BOOLEAN";
             } else if (vl.carrier() == char.class) {
-                return "JAVA_CHAR.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_CHAR" + withBitAlignmentIfNeeded(ValueLayout.JAVA_CHAR, vl);
             } else if (vl.carrier() == byte.class) {
                 return "JAVA_BYTE";
             } else if (vl.carrier() == short.class) {
-                return "JAVA_SHORT.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_SHORT" + withBitAlignmentIfNeeded(ValueLayout.JAVA_SHORT, vl);
             } else if (vl.carrier() == int.class) {
-                return "JAVA_INT.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_INT" + withBitAlignmentIfNeeded(ValueLayout.JAVA_INT, vl);
             } else if (vl.carrier() == float.class) {
-                return "JAVA_FLOAT.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_FLOAT" + withBitAlignmentIfNeeded(ValueLayout.JAVA_FLOAT, vl);
             } else if (vl.carrier() == long.class) {
-                return "JAVA_LONG.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_LONG" + withBitAlignmentIfNeeded(ValueLayout.JAVA_LONG, vl);
             } else if (vl.carrier() == double.class) {
-                return "JAVA_DOUBLE.withBitAlignment(" + vl.bitAlignment() + ")";
-            } else if (vl.carrier() == MemoryAddress.class) {
-                return "ADDRESS.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_DOUBLE" + withBitAlignmentIfNeeded(ValueLayout.JAVA_DOUBLE, vl);
+            } else if (vl.carrier() == MemorySegment.class) {
+                return "ADDRESS.withBitAlignment(" + vl.bitAlignment() + ").asUnbounded()";
             } else {
                 return "MemoryLayout.paddingLayout(" + vl.bitSize() +  ")";
             }
         }
 
+        String withBitAlignmentIfNeeded(ValueLayout original, ValueLayout actual) {
+            if (original.bitAlignment() == actual.bitAlignment()) {
+                return "";
+            }
+            return ".withBitAlignment(" + actual.bitAlignment() + ")";
+        }
+
         private Constant addPrimitiveLayout(String javaName, ValueLayout layout) {
-            ValueLayout layoutNoName = layoutNoName(layout);
+            ValueLayout layoutNoName = normalize(layout);
             Constant layoutConstant = super.addLayout(javaName, layoutNoName);
             primitiveLayouts.put(layoutNoName, layoutConstant);
             return layoutConstant;
         }
 
         private Constant addPrimitiveLayout(String javaName, Type.Primitive.Kind kind) {
-            return addPrimitiveLayout(javaName, (ValueLayout)kind.layout().get());
-        }
-
-        private ValueLayout layoutNoName(ValueLayout layout) {
-            // drop name if present
-            return MemoryLayout.valueLayout(layout.carrier(), layout.order())
-                    .withBitAlignment(layout.bitAlignment());
+            return addPrimitiveLayout(javaName, (ValueLayout)kind.layout().orElseThrow());
         }
 
         public Constant resolvePrimitiveLayout(ValueLayout layout) {
-            return primitiveLayouts.get(layoutNoName(layout));
+            return primitiveLayouts.get(normalize(layout));
+        }
+
+        public ValueLayout normalize(ValueLayout valueLayout) {
+            return MemoryLayout.valueLayout(valueLayout.carrier(), valueLayout.order()) // drop name
+                    .withBitAlignment(valueLayout.bitSize()); // use natural alignment
         }
     }
 
@@ -298,16 +312,24 @@ class ToplevelBuilder extends JavaSourceBuilder {
                 constantBuilder.classEnd();
             }
             constant_counter = 0;
-            constantBuilder = new ConstantBuilder(this, "constants$" + constant_class_index++) {
-                @Override
-                String mods() {
-                    return ""; // constants package-private!
-                }
-            };
+            constantBuilder = new ConstantsSequelBuilder(this, "constants$" + constant_class_index++);
             constantBuilders.add(constantBuilder);
             constantBuilder.classBegin();
         }
         constantConsumer.accept(constantBuilder);
         constant_counter++;
     }
+
+    static final class ConstantsSequelBuilder extends ConstantBuilder {
+
+        ConstantsSequelBuilder(JavaSourceBuilder enclosing, String className) {
+            super(enclosing, className);
+        }
+
+        @Override
+        String mods() {
+            return "final "; // constants package-private!
+        }
+    }
+
 }
