@@ -21,12 +21,12 @@
  * questions.
  */
 
+import java.lang.foreign.Arena;
 import java.lang.reflect.Method;
 import java.lang.foreign.GroupLayout;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemoryLayout.PathElement;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import org.testng.annotations.Test;
 
 import test.jextract.unsupported.unsupported_h;
@@ -53,8 +53,8 @@ import test.jextract.unsupported.*;
 public class LibUnsupportedTest {
     @Test
     public void testAllocateFoo() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            var seg = Foo.allocate(session);
+        try (Arena arena = Arena.openConfined()) {
+            var seg = Foo.allocate(arena);
             Foo.i$set(seg, 32);
             Foo.c$set(seg, (byte)'z');
             assertEquals(Foo.i$get(seg), 32);
@@ -64,8 +64,8 @@ public class LibUnsupportedTest {
 
     @Test
     public void testGetFoo() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            var seg = MemorySegment.ofAddress(getFoo(), Foo.sizeof(), session);
+        try (Arena arena = Arena.openConfined()) {
+            var seg = MemorySegment.ofAddress(getFoo().address(), Foo.sizeof(), arena.scope());
             Foo.i$set(seg, 42);
             Foo.c$set(seg, (byte)'j');
             assertEquals(Foo.i$get(seg), 42);
